# dq-detection-and-remediation-fork

./: CLAUDE.md  Makefile  README.md  pyproject.toml
assets/config/: dq_rules.yaml  remediation_policy.yaml
assets/data/: customer_orders_quarantine.csv  customer_orders_raw.csv  customer_orders_remediated.csv
assets/issues/: ISSUE_148_customer_orders_dq_regression.md
assets/prompts/: claude_code_issue_prompt.md
assets/reference/: customer_dimension.csv  valid_status_codes.csv
integration/: create_or_update_flow_with_sdk.py  mcp_runbook.md  wdi_flow_blueprint.yaml
reports/: dq_summary.json  invalid_rows.csv
src/: dq_detect.py  remediate_orders.py
tests/: test_remediation.py
