[project]
name = "wxdi-dq-remediation-demo"
version = "0.1.0"
description = "Mock watsonx.data intelligence and watsonx.data integration data-quality detection/remediation starter assets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ibm = [
  "data-intelligence-sdk>=2.1.0",
  "ibm-watsonx-data-integration>=1.3.1",
]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
